Delete api route
